--- a/Service4U/app/src/main/res/values/dimens.xml
+++ b/Service4U/app/src/main/res/values/dimens.xml
@@ -11,4 +11,5 @@
     <dimen name="fab_margin">16dp</dimen>
     <dimen name="text_margin">16dp</dimen>
     <dimen name="appbar_padding_top">8dp</dimen>
+    <dimen name="rating_bar_height">20dp</dimen>
 </resources>
