edited job details
quit

--- a/Service4U/app/src/main/res/layout/activity_job_options.xml
+++ b/Service4U/app/src/main/res/layout/activity_job_options.xml
@@ -29,6 +29,16 @@
 
     </android.support.design.widget.AppBarLayout>
 
+    <TextView
+        android:id="@+id/noOptionsText"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_gravity="center"
+        android:layout_weight="1"
+        android:gravity="center"
+        android:text="@string/no_job_options"
+        android:visibility="gone" />
+
     <android.support.v4.view.ViewPager
         android:id="@+id/container"
         android:layout_width="match_parent"
