--- a/Service4U/app/src/main/res/layout/activity_job.xml
+++ b/Service4U/app/src/main/res/layout/activity_job.xml
@@ -88,6 +88,7 @@
             android:id="@+id/cancelJobBtn"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:onClick="cancelJob"
             android:text="@string/cancel_job" />
     </LinearLayout>
 </android.support.constraint.ConstraintLayout>
