added service prov fields

--- a/Service4U/app/src/main/res/layout/activity_my_account.xml
+++ b/Service4U/app/src/main/res/layout/activity_my_account.xml
@@ -96,6 +96,54 @@
         </LinearLayout>
 
         <LinearLayout
+            android:id="@+id/companyNameLayout"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="horizontal">
+
+            <TextView
+                android:id="@+id/companyName"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                android:gravity="left"
+                android:textColor="@color/common_google_signin_btn_text_dark_focused"
+                android:theme="@style/ThemeOverlay.MyTextDetail" />
+
+            <EditText
+                android:id="@+id/editCompanyName"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                android:ems="10"
+                android:inputType="textPersonName"
+                android:visibility="gone" />
+        </LinearLayout>
+
+        <LinearLayout
+            android:id="@+id/licensedLayout"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="horizontal">
+
+            <TextView
+                android:id="@+id/licensed"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                android:gravity="left"
+                android:textColor="@color/common_google_signin_btn_text_dark_focused"
+                android:theme="@style/ThemeOverlay.MyTextDetail" />
+
+            <CheckBox
+                android:id="@+id/licensedCB"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_weight="0.5"
+                android:visibility="gone" />
+        </LinearLayout>
+
+        <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:orientation="horizontal">
@@ -141,6 +189,33 @@
                 android:ems="10"
                 android:inputType="textPostalAddress"
                 android:visibility="gone" />
+        </LinearLayout>
+
+        <LinearLayout
+            android:id="@+id/descriptionLayout"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:orientation="horizontal">
+
+            <TextView
+                android:id="@+id/description"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                android:gravity="left"
+                android:textColor="@color/common_google_signin_btn_text_dark_focused"
+                android:theme="@style/ThemeOverlay.MyTextDetail" />
+
+            <EditText
+                android:id="@+id/editDescription"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                android:ems="10"
+                android:inputType="textMultiLine"
+                android:visibility="gone" />
+
         </LinearLayout>
 
         <Button
