--- a/Service4U/app/src/main/res/layout/activity_availability_calendar.xml
+++ b/Service4U/app/src/main/res/layout/activity_availability_calendar.xml
@@ -17,6 +17,11 @@
             android:layout_height="wrap_content"
             android:layout_gravity="center_horizontal" />
 
+        <TextView
+            android:id="@+id/upcomingAvailabilityText"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content" />
+
         <Button
             android:id="@+id/backToMyAccountBtn"
             android:layout_width="match_parent"
