can filter search by rating

--- a/Service4U/app/src/main/res/layout/activity_job.xml
+++ b/Service4U/app/src/main/res/layout/activity_job.xml
@@ -84,6 +84,33 @@
             android:numStars="5"
             android:stepSize="1"/>
 
+        <LinearLayout
+            android:id="@+id/commentLayout"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:layout_weight="1"
+            android:orientation="vertical">
+
+            <TextView
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                android:gravity="left"
+                android:text="Comments:"
+                android:textColor="@color/common_google_signin_btn_text_dark_focused"
+                android:theme="@style/ThemeOverlay.MyTextDetail" />
+
+            <EditText
+                android:id="@+id/editComment"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                android:ems="10"
+                android:inputType="textMultiLine"
+                android:visibility="gone" />
+
+        </LinearLayout>
+
         <Button
             android:id="@+id/cancelJobBtn"
             android:layout_width="match_parent"
