--- a/Service4U/app/src/main/res/layout/activity_book_job.xml
+++ b/Service4U/app/src/main/res/layout/activity_book_job.xml
@@ -325,6 +325,38 @@
                 android:text="hours" />
         </LinearLayout>
 
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="horizontal">
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginBottom="@dimen/activity_vertical_margin"
+                android:layout_marginEnd="@dimen/activity_horizontal_margin"
+                android:layout_marginStart="@dimen/activity_horizontal_margin"
+                android:layout_marginTop="@dimen/activity_vertical_margin"
+                android:layout_weight="1"
+                android:text="Min rating"
+                app:layout_constraintLeft_toLeftOf="parent"
+                app:layout_constraintTop_toTopOf="@+id/constraintLayout"
+                tools:layout_constraintLeft_creator="1"
+                tools:layout_constraintTop_creator="1" />
+
+            <RatingBar
+                android:id="@+id/minRatingBar"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center_horizontal"
+                android:layout_weight="1"
+                android:isIndicator="false"
+                android:numStars="5"
+                android:stepSize="1"
+                android:scaleX=".5"
+                android:scaleY=".5" />
+        </LinearLayout>
+
         <Button
             android:id="@+id/findAProviderBtn"
             android:layout_width="match_parent"
