--- a/Service4U/app/src/main/res/layout/fragment_job_options.xml
+++ b/Service4U/app/src/main/res/layout/fragment_job_options.xml
@@ -66,7 +66,7 @@
 
         <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
+            android:layout_height="wrap_content"
             android:orientation="horizontal">
 
             <TextView
