--- a/Service4U/app/src/main/res/layout/activity_main.xml
+++ b/Service4U/app/src/main/res/layout/activity_main.xml
@@ -38,7 +38,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_weight="4"
-            app:srcCompat="@drawable/larry" />
+            app:srcCompat="@drawable/app_logo1_copy" />
 
         <TextView
             android:id="@+id/status"
