--- a/Service4U/app/src/main/res/layout/activity_book_job.xml
+++ b/Service4U/app/src/main/res/layout/activity_book_job.xml
@@ -20,16 +20,17 @@
 
             <TextView
                 android:id="@+id/textView"
-                android:layout_width="wrap_content"
-                android:layout_height="match_parent"
-                android:layout_weight="1"
+                style="@style/TextAppearance.AppCompat.Headline"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_weight="2"
                 android:text="Service" />
 
             <Spinner
                 android:id="@+id/serviceSpinner"
-                android:layout_width="wrap_content"
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_weight="3" />
+                android:layout_weight="1" />
 
 
         </LinearLayout>
@@ -37,38 +38,54 @@
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:orientation="vertical">
+            android:orientation="horizontal">
 
-            <TextView
-                android:id="@+id/textView5"
+            <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:text="Availability" />
+                android:layout_weight="1"
+                android:orientation="vertical">
+
+                <TextView
+                    android:id="@+id/textView5"
+                    style="@style/TextAppearance.AppCompat.Headline"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:text="Availability" />
+
+                <TextView
+                    android:id="@+id/afternoonText"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_weight="1"
+                    android:text="Afternoon" />
+
+                <TextView
+                    android:id="@+id/eveningText"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_weight="1"
+                    android:text="Evening" />
+
+                <TextView
+                    android:id="@+id/morningText"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_weight="1"
+                    android:text="Morning :" />
+
+            </LinearLayout>
 
             <TextView
                 android:id="@+id/availabilityErrorText"
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
+                android:layout_height="match_parent"
+                android:layout_weight="1.25"
+                android:gravity="bottom|right"
+                android:paddingRight="10dp"
                 android:textColor="@android:color/holo_red_dark"
                 android:visibility="gone" />
 
-            <TextView
-                android:id="@+id/morningText"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:text="Morning :" />
-
-            <TextView
-                android:id="@+id/afternoonText"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:text="Afternoon" />
-
-            <TextView
-                android:id="@+id/eveningText"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:text="Evening" />
         </LinearLayout>
 
         <TableLayout
@@ -288,8 +305,9 @@
 
             <TextView
                 android:id="@+id/urgencyText"
+                style="@style/TextAppearance.AppCompat.Headline"
                 android:layout_width="wrap_content"
-                android:layout_height="match_parent"
+                android:layout_height="wrap_content"
                 android:layout_weight="1"
                 android:text="Urgency" />
 
@@ -307,8 +325,9 @@
 
             <TextView
                 android:id="@+id/timeText"
+                style="@style/TextAppearance.AppCompat.Headline"
                 android:layout_width="wrap_content"
-                android:layout_height="match_parent"
+                android:layout_height="wrap_content"
                 android:text="Time" />
 
             <Spinner
@@ -322,6 +341,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="match_parent"
                 android:layout_weight="1"
+                android:gravity="center_vertical"
                 android:text="hours" />
         </LinearLayout>
 
@@ -331,18 +351,12 @@
             android:orientation="horizontal">
 
             <TextView
+                style="@style/TextAppearance.AppCompat.Headline"
                 android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginBottom="@dimen/activity_vertical_margin"
-                android:layout_marginEnd="@dimen/activity_horizontal_margin"
-                android:layout_marginStart="@dimen/activity_horizontal_margin"
-                android:layout_marginTop="@dimen/activity_vertical_margin"
+                android:layout_height="match_parent"
                 android:layout_weight="1"
-                android:text="Min rating"
-                app:layout_constraintLeft_toLeftOf="parent"
-                app:layout_constraintTop_toTopOf="@+id/constraintLayout"
-                tools:layout_constraintLeft_creator="1"
-                tools:layout_constraintTop_creator="1" />
+                android:gravity="center"
+                android:text="Min rating" />
 
             <RatingBar
                 android:id="@+id/minRatingBar"
@@ -352,9 +366,9 @@
                 android:layout_weight="1"
                 android:isIndicator="false"
                 android:numStars="5"
-                android:stepSize="1"
                 android:scaleX=".5"
-                android:scaleY=".5" />
+                android:scaleY=".5"
+                android:stepSize="1" />
         </LinearLayout>
 
         <Button
