--- a/Service4U/app/src/main/res/layout/activity_main.xml
+++ b/Service4U/app/src/main/res/layout/activity_main.xml
@@ -43,9 +43,11 @@
         <TextView
             android:id="@+id/status"
             style="@style/ThemeOverlay.MyTextDetail"
-            android:layout_width="200dp"
+            android:layout_width="wrap_content"
             android:layout_height="100dp"
             android:layout_weight="0.5"
+
+            android:gravity="center_vertical"
             android:text="@string/signed_out"
             tools:text="You are signed in as:" />
 
@@ -55,6 +57,7 @@
             android:layout_width="200dp"
             android:layout_height="100dp"
             android:layout_weight="0.5"
+            android:gravity="center"
             android:text="@string/please_signin" />
 
 
