--- a/Service4U/app/src/main/res/layout/layout_service_list.xml
+++ b/Service4U/app/src/main/res/layout/layout_service_list.xml
@@ -7,22 +7,23 @@
 
     <TextView
         android:id="@+id/serviceNameText"
+        style="?attr/textAppearanceListItem"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_weight="0.5"
-        android:text="TextView" />
+        android:layout_weight="0.75" />
 
     <TextView
         android:id="@+id/serviceTypeText"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_weight="1"
-        android:text="TextView" />
+        style="?attr/textAppearanceListItem" />
 
     <TextView
         android:id="@+id/serviceRateText"
+        style="?attr/textAppearanceListItem"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_weight="1"
-        android:text="TextView" />
+        android:gravity="right" />
 </android.widget.LinearLayout>
